MFG Ready Version/force-app/main/default/objects/mfg_Stock_Movement__c/fields/mfg_From_Warehouse__c.field-meta.xml
<CustomField>
    <fullName>mfg_From_Warehouse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>From Warehouse</label>
    <referenceTo>mfg_Warehouse__c</referenceTo>
    <relationshipLabel>Stock Movements</relationshipLabel>
    <relationshipName>Stock_Movements</relationshipName>
    <type>Lookup</type>
</CustomField>