MFG Ready Version/force-app/main/default/objects/mfg_Stock_Movement__c/fields/mfg_Product__c.field-meta.xml
<CustomField>
    <fullName>mfg_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Stock Movements</relationshipLabel>
    <relationshipName>Stock_Movements</relationshipName>
    <type>Lookup</type>
</CustomField>