MFG Ready Version/force-app/main/default/objects/mfg_Stock_Movement__c/fields/mfg_Quantity_Moved__c.field-meta.xml
<CustomField>
    <fullName>mfg_Quantity_Moved__c</fullName>
    <label>Quantity Moved</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>