MFG Ready Version/force-app/main/default/objects/mfg_Stock_Movement__c/fields/mfg_Reference__c.field-meta.xml
<CustomField>
    <fullName>mfg_Reference__c</fullName>
    <label>Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>