MFG Ready Version/force-app/main/default/objects/mfg_Stock_Movement__c/fields/mfg_To_Warehouse__c.field-meta.xml
<CustomField>
    <fullName>mfg_To_Warehouse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>To Warehouse</label>
    <referenceTo>mfg_Warehouse__c</referenceTo>
    <relationshipLabel>Stock Movements (To Warehouse)</relationshipLabel>
    <relationshipName>Stock_Movements1</relationshipName>
    <type>Lookup</type>
</CustomField>