MFG Ready Version/force-app/main/default/objects/mfg_Stock_Movement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>mfg_Product__c</columns>
    <columns>mfg_Quantity_Moved__c</columns>
    <columns>mfg_Status__c</columns>
    <columns>mfg_Movement_Type__c</columns>
    <columns>mfg_Production_Batch__c</columns>
    <columns>mfg_From_Warehouse__c</columns>
    <columns>mfg_To_Warehouse__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>